[package]
name = "name-this-color"
version = "0.1.0"
authors = ["Henry Barreto <contato@henrybarreto.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.gtk]
version = "0.9.2"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
